# Algos

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yaml  test.yaml
cmake/: FindCatch2.cmake
include/bubble/: bubble_sort.hpp
include/heapsort/: heapsort.hpp
include/my_list/: list.hpp
include/mystring/: MyString.hpp
src/: MyString.cpp  bubble_sort.cpp  heapsort.cpp  list.cpp  main.cpp
test/: MyString_test.cpp  bubble_test.cpp  heapsort_test.cpp  list_test.cpp
